@@ -11,12 +11,14 @@ license = "MIT"
 
 [features]
 uuid = ["_uuid"]
+arcstr = ["_arcstr"]
 
 [dependencies]
 serde = "1"
 serde_json = "1"
 itertools = "0.10.0"
 _uuid = { package = "uuid", version = "0.8", features = [ "v4", "serde" ], optional = true }
+_arcstr = { package = "arcstr", version = "1", features = [ "std", "serde" ], optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.3.4", features = [ "html_reports", "cargo_bench_support" ] }
