@@ -105,6 +105,8 @@
 //! ```
 
 #![warn(clippy::all)]
+#[cfg(feature = "arcstr")]
+use _arcstr::ArcStr;
 use serde::de::{DeserializeSeed, Deserializer, MapAccess, SeqAccess, Visitor};
 use std::borrow::Cow;
 use std::collections::BTreeMap;
